POD_PVC.yml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
spec:
  containers:
    - name: myfrontend
      image: kodekloud/event-simulator
      volumeMounts:
      - mountPath: /log
        name: mypvc
  volumes:
    - name: mypvc
      persistentVolumeClaim:
        claimName: claim-log-1
        
        seenu75@gmail.com
